--- a/joole-frontend/package.json
+++ b/joole-frontend/package.json
@@ -6,7 +6,7 @@
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.4.0",
     "@testing-library/user-event": "^7.2.1",
-    "axios": "^0.19.2",
+    "axios": "^1.4.0",
     "formik": "^2.1.4",
     "react": "^16.12.0",
     "react-bootstrap": "^1.0.0-beta.16",
@@ -14,7 +14,7 @@
     "react-input-range": "^1.3.0",
     "react-redux": "^7.1.3",
     "react-router-dom": "^5.1.2",
-    "react-scripts": "3.3.1",
+    "react-scripts": "^5.0.1",
     "redux": "^4.0.5",
     "redux-thunk": "^2.3.0",
     "suggestion-react-input-search": "^1.4.0",
