--- a/joole-backend/src/main/resources/application.properties
+++ b/joole-backend/src/main/resources/application.properties
@@ -3,8 +3,8 @@ spring.devtools.restart.enabled=true
 
 ## MySQL
 spring.datasource.url=jdbc:mysql://localhost:3306/joole
-spring.datasource.username=root
-spring.datasource.password=root
+spring.datasource.username=<insert here>
+spring.datasource.password=<insert here>
 
 #`hibernate_sequence' doesn't exist
 spring.jpa.hibernate.use-new-id-generator-mappings=false
